@@ -3,6 +3,7 @@
     disk, not the last one across all disks (mga#15589)
   o suggest up to 20GB/20% of the windows partition (whichever is larger),
     previously 6GB/10% (mga#15589)
+  o hide empty space < 2MB, we have such holes due to alignment (mga#15733)
 - ugtk2, ugtk3, harddrake2:
   o do not "restore" mouse cursor on the root window, we haven't set it to
     'wait' since 2005 and this causes a crash if we don't own it (mga#15729).
